--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,9 +4,11 @@
     <group android:checkableBehavior="single">
         <item
                 android:id="@+id/nav_navigation"
+                android:icon="@drawable/ic_menu_navigation"
                 android:title="@string/nav_navigation"/>
         <item
                 android:id="@+id/nav_media"
+                android:icon="@drawable/ic_menu_media"
                 android:title="@string/nav_media"/>
         <item
                 android:id="@+id/nav_ready_car"
@@ -16,6 +18,7 @@
                 android:title="@string/nav_driving_score"/>
         <item
                 android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_menu_settings"
                 android:title="@string/nav_settings"/>
     </group>
 
