--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<GridLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,4 +14,127 @@
         tools:showIn="@layout/app_bar_main"
         tools:context="org.ateam.carcontrol.MainActivity">
 
-</RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/mediaButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_column="3"
+        android:layout_row="0"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/media_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/getCarReadyButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_column="0"
+        android:layout_row="2"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/get_car_ready_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/naviButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/navigation_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/drivingScoreButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_column="0"
+        android:layout_row="4"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/driving_score_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/settingsButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_column="3"
+        android:layout_row="4"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/settings_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/remoteControlButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_column="3"
+        android:layout_row="2"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/remote_icon"
+        android:background="@android:color/transparent"/>
+
+    <TextView
+        android:id="@+id/navigationLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:text="Navigation"
+        android:layout_gravity="center_horizontal"
+        android:textSize="15dp"/>
+
+    <TextView
+        android:id="@+id/mediaLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_gravity="center_horizontal"
+        android:layout_row="1"
+        android:text="Media"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/carReadyLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="center_horizontal"
+        android:layout_row="3"
+        android:text="Get car ready"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/remoteControlLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_gravity="center_horizontal"
+        android:layout_row="3"
+        android:text="Remote control"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/drivingScoreLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="center_horizontal"
+        android:layout_row="5"
+        android:text="Driving score"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/settingsLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_gravity="center_horizontal"
+        android:layout_row="5"
+        android:text="Settings"
+        android:textSize="15dp" />
+
+
+
+</GridLayout>
