Added margin to compensate for action bar + tab bar

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -44,7 +44,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="112dp">
 
         <include layout="@layout/content_main"
             android:id="@+id/contentMain"
