--- a/app/src/main/res/layout/activity_rc_control.xml
+++ b/app/src/main/res/layout/activity_rc_control.xml
@@ -11,12 +11,52 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.ateam.carcontrol.RcControl">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/carwheel"
-        android:id="@+id/imageView2"
-        android:rotation="90"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView2"
+            android:rotation="90"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/carwheel" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="5">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
+                android:id="@+id/imageView4"
+                android:layout_weight="4" />
+
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/seekBar"
+                android:layout_weight="1"
+                android:progress="50"
+                style="@style/Widget.AppCompat.SeekBar"
+                android:progressTint="@android:color/transparent" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
+                android:id="@+id/imageView3"
+                android:layout_weight="4" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </RelativeLayout>
