--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/contentMain"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone" />
+                android:visibility="visible" />
             <include layout="@layout/content_feed"
                 android:id="@+id/contentFeed"
                 android:layout_width="match_parent"
