--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -73,7 +73,8 @@
         android:layout_row="2"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/remote_icon"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:onClick="rcButtonClicked" />
 
     <TextView
         android:id="@+id/navigationLabel"
