--- a/app/src/main/res/layout/activity_remote_control.xml
+++ b/app/src/main/res/layout/activity_remote_control.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.ateam.carcontrol.RcControl">
+    tools:context="org.ateam.carcontrol.RemoteControlActivity">
 
     <LinearLayout
         android:orientation="vertical"
