--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,9 +15,13 @@
                 android:icon="@drawable/ic_menu_ready_car"
                 android:title="@string/nav_ready_car"/>
         <item
-                android:id="@+id/nav_driving_score"
-                android:icon="@drawable/ic_menu_driving_score"
-                android:title="@string/nav_driving_score"/>
+            android:id="@+id/nav_driving_score"
+            android:icon="@drawable/ic_menu_driving_score"
+            android:title="@string/nav_driving_score"/>
+        <item
+            android:id="@+id/nav_convoy"
+            android:icon="@drawable/ic_menu_convoy"
+            android:title="@string/nav_convoy"/>
         <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_settings"
